# curves

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  include-directories.txt  install_manifest.txt  main.cpp
cmake/: curvesLibraryTargets.cmake  curvesTargets.cmake
include/: circle.cpp  circle.h  curves3factory.cpp  helix3.h  point3.cpp  point3.h  vector3.cpp  vector3.h
install/cmake/: CurvesLibraryConfig.cmake  CurvesLibraryTargets.cmake  curvesLibraryConfig.cmake  curvesLibraryTargets-noconfig.cmake  curvesLibraryTargets.cmake
install/include/curvesLibrary/: curve.h  curve3abstract.h  curves3factory.h  ellipse.h
src/: circle.cpp  curve3abstract.cpp  curves3factory.cpp  ellipse.cpp  helix3.cpp
usecase/curves/: CMakeCache.txt.prev  CMakeLists.txt  CMakeLists.txt.user.7d5894d  Makefile  cmake_install.cmake  curves-usage  main.cpp
usecase/curves/.cmake/api/v1/reply/: cache-v2-6b2422fd4ab26374463e.json  cmakeFiles-v1-09e28453ad2d467e73bb.json  codemodel-v2-2fc16e03b2f2df8beacb.json  index-2023-09-09T09-59-34-0389.json  target-curves-usage-ab67efb0694a794d2c40.json
usecase/curves/.cmake/api/v1/reply.prev/: codemodel-v2-da347d5a7faa46b68098.json  index-2023-09-09T09-59-19-0223.json  target-curves-usage-3cb987e6b5317a57369b.json
usecase/curves/include/: circle.cpp  circle.h  curve.h  curve3abstract.h  curves3factory.h  ellipse.cpp  ellipse.h  helix3.h  point3.h  vector3.h
usecase/curves/src/: curve3abstract.cpp  curves3factory.cpp  helix3.cpp
